@@ -269,7 +269,8 @@ class ComplexType(Type):
 
             # Check if all children are consumed (parsed)
             if elements:
-                raise XMLParseError("Unexpected element: %s" % elements[0].tag)
+                raise XMLParseError("Unexpected element %r, expected %r" % (
+                    elements[0].tag, self.elements[0][1].qname.text))
 
         # Parse attributes
         attributes = copy.copy(attributes)
