@@ -3,6 +3,8 @@
  - Fix error when rendering choice elements with have sequences as children, 
    see #150
  - Re-use credentials passed to python -mzeep <wsdl> (#130)
+ - Workaround invalid usage of qualified vs non-qualified element tags in the
+   response handling (#176)
 
 
 0.15.0 (2016-09-04)
